# axon

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/ISSUE_TEMPLATE/: dagbani-tts.md
adapters/: package.json
adapters/src/: index.ts
adapters/src/channels/: index.ts
adapters/src/languages/: base.ts  index.ts  khaya.ts  types.ts
docs/: api-reference.md  configuration.md  contributing.md  deployment.md  quickstart.md
examples/clinic/: README.md  agent.ts
examples/clinic/docs/: faq.txt  services.txt
examples/gcb-bank/: README.md  agent.ts
examples/gcb-bank/docs/: banking-faq.txt
examples/sdi/: README.md  agent.ts
examples/sdi/docs/: school-faq.txt
python/axon-ai/: README.md  pyproject.toml
python/axon-ai/src/axon_ai/: __init__.py  client.py
